--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,27 @@
  h2 {
     text-align: center;
 }
+.main{
+ padding-top: 50px;
+}
+.header {
+    position: fixed;
+    height: 60px;
+    width: 100%;
+    border-bottom: 1px solid black;
+}
+.navigation{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 60px;
+    margin: 0 auto;
+}
+.navigation a {
+    margin: 0 10px;
+    font-size: 24px;
+}
 img {
 
     width: 25%;
