--- a/tasks_Dydyk7/style.css
+++ b/tasks_Dydyk7/style.css
@@ -4,7 +4,8 @@
 	font-family: Arial;
 }
 h1{
-	margin:0 0 60px 260px;
+	text-align: center;
+	margin-bottom: 30px;
 }
 .wrap{
 	position: relative;
@@ -13,6 +14,7 @@ h1{
 	height: 30em;
 	width: 70em;
 	border: 1px solid #dedede;
+	margin: 0 auto;
 }
 .wrap::before{
 position: absolute;
@@ -23,10 +25,11 @@ width: 30px;
 height: 30px;
 border:3px solid #d8d8d8;
 border-radius: 50%;
-font-size: 25px;
+font-size: 27px;
 text-align: center;
 color: #d8d8d8;
 font-weight: bold;
+background-color: white;
 }
 .wrap::after{
 	position: absolute;
@@ -37,10 +40,11 @@ font-weight: bold;
 	height: 30px;
 	border:3px solid #d8d8d8;
 	border-radius: 50%;
-	font-size: 25px;
+	font-size: 27px;
 	text-align: center;
 	color: #d8d8d8;
 	font-weight: bold;
+	background-color: white;
 }
 
 .wrap_card{
@@ -102,6 +106,11 @@ text-align: center;
 	text-decoration: none;
 	color: lightskyblue;
 }
+.wrap_category a{
+	font-size: 23px;
+	text-decoration: none;
+	color: gray;
+}
 .wrap_price{
 	display: flex;
 	padding-top: 20px;
@@ -138,4 +147,9 @@ text-align: center;
 }
 .wrap:hover::after,.wrap:hover::before{
 	cursor: pointer;
+}
+.wrap_botton a {
+	color: white;
+	text-decoration: none;
+	padding: 12px 22px;
 }
