--- a/kkr/style.css
+++ b/kkr/style.css
@@ -199,7 +199,7 @@ color: rgb(153, 152, 152);
     width: 100px;
   }
   .footer{
-    display: none;
+   width: 300%;
   }
   .header {
     display: flex;
@@ -227,4 +227,13 @@ color: rgb(153, 152, 152);
     display: flex;
     flex-direction: column;
   }
+  .footer_wrap {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .footer_wrap span {
+  font-size: x-large;
+  }
 }
+
